base/src/test/resources/failure/operator/self-bind.aya.txt
In file $FILE:2:0 ->

  1 | def `+` : Type => +
  2 | bind + looser +
      ^-------------^

Error: Self bind is not allowed
Resolving interrupted due to error(s).
What are you doing?
